@@ -2,6 +2,7 @@
 #define MATCHPPDSTHREAD_H
 
 #include <QObject>
+#include<QMutexLocker>
 #include "findppdsthread.h"
 
 enum deviceType
@@ -26,12 +27,13 @@ public slots:
     void initPPDMatch(QString bandName, QString printerName, myMap data, int type);
 
 private:
+    QMutex m_mutex;
     QMap<QString, QMap<QString, PPDsAndAttr>> originData;
 
     QString printerBandName = nullptr;
     QString printerModelName = nullptr;
 
-    QPair<QMap<int, QStringList>, bool> eactMatch(QString printerModel, QMap<QString, PPDsAndAttr> map, int type);
+    QPair<QMap<int, QStringList>, bool> exactMatch(QString printerModel, QMap<QString, PPDsAndAttr> map, int type);
     QPair<QMap<int, QStringList>, bool> genericMatch(QString printerModel, QMap<QString, PPDsAndAttr> map, int type);
 
     bool exactMatchFlag = false;
